--- a/Proyecto_PDM/app/src/main/res/layout/fragment_controllers.xml
+++ b/Proyecto_PDM/app/src/main/res/layout/fragment_controllers.xml
@@ -208,7 +208,7 @@
                                 android:id="@+id/counter"
                                 android:layout_width="50dp"
                                 android:layout_height="45dp"
-                                android:text="0"
+                                android:text=""
                                 android:textAlignment="center"
                                 android:gravity="center"
                                 app:layout_constraintBottom_toBottomOf="parent"
