--- a/Proyecto_PDM/app/src/main/res/layout/fragment_route.xml
+++ b/Proyecto_PDM/app/src/main/res/layout/fragment_route.xml
@@ -8,7 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/action_to_previus_routeFragment"
             android:layout_width="wrap_content"
@@ -20,7 +19,7 @@
             android:contentDescription="Back to controller"
             android:src="@drawable/baseline_arrow_back_24"
             app:background="@color/txtColor"
-            style="@style/buttonColor"
+            app:backgroundTint="@color/btnColor"
             app:borderWidth="@dimen/borderWidthBtn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -36,32 +35,26 @@
             android:contentDescription="Delete route"
             android:src="@drawable/baseline_delete_24"
             app:background="@color/txtColor"
-            style="@style/buttonColor"
+            app:backgroundTint="@color/btnColor"
             app:borderWidth="@dimen/borderWidthBtn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
 
-                <com.example.zacatales.smartrobotapp.view.RouteView
-                    android:id="@+id/routeView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toTopOf="@+id/textViewNameAppController"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.096" />
 
-            </HorizontalScrollView>
-        </ScrollView>
+        <com.example.zacatales.smartrobotapp.view.RouteView
+            android:id="@+id/routeView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/textViewNameAppController"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.096" />
+
+
 
         <TextView
             android:id="@+id/textViewNameAppController"
@@ -72,7 +65,7 @@
             android:layout_marginBottom="@dimen/maxGap"
             android:gravity="center"
             android:text="@string/NameApp"
-            style="@style/textColor"
+            android:textColor="@color/txtColor"
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
